<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/scrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="350dp"
            android:orientation="horizontal"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/holo_orange_dark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/taskTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taskTitle"
                    android:textColor="@color/titleColor"
                    android:textSize="36sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/taskPointsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taskPoints"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/taskTitleTextView" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/taskDescriptionTextView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/taskDescription"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/statusTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/statusTitle"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescriptionTextView" />

        <TextView
            android:id="@+id/uploadTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/uploadTitle"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:elevation="50dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadTitleTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/uploadImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pick_image"
                    tools:layout_editor_absoluteX="148dp"
                    tools:layout_editor_absoluteY="587dp" />

                <Button
                    android:id="@+id/selectImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/upload_button_design"
                    android:text="@string/uploadButton"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/statusBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:fadingEdge="horizontal"
            android:max="4"
            android:min="0"
            android:progress="1"
            android:progressTint="@color/titleColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTitleTextView" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusBar">

            <TextView
                android:id="@+id/yetToUploadTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progressBarMessage1"
                android:textColor="@color/titleColor"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusBar" />

            <TextView
                android:id="@+id/pendingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progressBarMessage2"
                android:textColor="@color/pending"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/yetToUploadTextView"
                app:layout_constraintTop_toBottomOf="@+id/statusBar"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/rejectedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progressBarMessage3"
                android:textColor="@color/rejected"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/pendingTextView"
                app:layout_constraintTop_toBottomOf="@+id/statusBar"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/completedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progressBarMessage4"
                android:textColor="@color/completed"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/rejectedTextView"
                app:layout_constraintTop_toBottomOf="@+id/statusBar"
                tools:visibility="visible" />
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressBar"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            app:indicatorColor="@color/titleColor"
            app:indicatorName="BallClipRotatePulseIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>